added custom theme

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,5 @@
-<p>header works!</p>
+<mat-toolbar color="primary">
+    <button mat-icon-button>
+        <mat-icon>person</mat-icon>
+    </button>
+</mat-toolbar>
