--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,8 @@
-<mat-toolbar color="primary">
-    <button mat-icon-button>
+<mat-toolbar color="primary" class="header">
+    <button mat-button (click)="logout()">
+        Cerrar Sesion
+    </button>
+    <button mat-icon-button routerLink="/profile">
         <mat-icon>person</mat-icon>
     </button>
 </mat-toolbar>
