--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,49 +1,69 @@
-
-// Custom Theming for Angular Material
-// For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
-// Plus imports for other components in your app.
-
-// Include the common styles for Angular Material. We include this here so that you only
-// have to load a single css file for Angular Material in your app.
-// Be sure that you only ever include this mixin once!
 @include mat.core();
 
-// Define the palettes for your theme using the Material Design palettes available in palette.scss
-// (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// hue. Available color palettes: https://material.io/design/color/
-$proyectoAppAngular-primary: mat.define-palette(mat.$grey-palette, 700, 500, 900);
-$proyectoAppAngular-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
-$proyectoAppAngular-warn: mat.define-palette(mat.$red-palette);
+// using http://mcg.mbitson.com/ to generate the color palettes
 
-// Create the theme object. A theme consists of configurations for individual
-// theming systems such as "color" or "typography".
-$proyectoAppAngular-theme: mat.define-light-theme((
+$md-primary: (
+  50 : #eceaea,
+  100 : #d1cbcb,
+  200 : #b2a9a9,
+  300 : #938787,
+  400 : #7b6d6d,
+  500 : #645353,
+  600 : #5c4c4c,
+  700 : #524242,
+  800 : #483939,
+  900 : #362929,
+  A100 : #fd8787,
+  A200 : #fc5555,
+  A400 : #ff1f1f,
+  A700 : #ff0505,
+  contrast: (
+    50 : #000000,
+    100 : #000000,
+    200 : #000000,
+    300 : #000000,
+    400 : #ffffff,
+    500 : #ffffff,
+    600 : #ffffff,
+    700 : #ffffff,
+    800 : #ffffff,
+    900 : #ffffff,
+    A100 : #000000,
+    A200 : #000000,
+    A400 : #ffffff,
+    A700 : #ffffff,
+  )
+);
+
+$mytheme-primary: mat.define-palette($md-primary);
+$mytheme-accent: mat.define-palette(mat.$green-palette);
+$mytheme-warn: mat.define-palette(mat.$red-palette);
+
+$mytheme-theme: mat.define-light-theme((
   color: (
-    primary: $proyectoAppAngular-primary,
-    accent: $proyectoAppAngular-accent,
-    warn: $proyectoAppAngular-warn,
+    primary: $mytheme-primary,
+    accent: $mytheme-accent,
+    warn: $mytheme-warn,
   )
 ));
 
-// Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
-@include mat.all-component-themes($proyectoAppAngular-theme);
+@include mat.all-component-themes($mytheme-theme);
 
 @font-face {
-    font-family: 'Intel';
-    src: url('./assets/fonts/Inter/Inter-VariableFont.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'Intel';
+  src: url('./assets/fonts/Inter/Inter-VariableFont.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
 }
  
 
 html, body {
-    height: 100%;
+  height: 100%;
 }
 
 body {
-    margin: 0;
-    font-family: "Intel", Roboto, "Helvetica Neue", sans-serif;
+  margin: 0;
+  font-family: "Intel", Roboto, "Helvetica Neue", sans-serif;
+  background-color: #FFFAF2;
 }
