added menu and profile view

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,3 +1,5 @@
-<mat-toolbar color="primary">
-    <span>a</span>
-</mat-toolbar>
+<footer>
+    <mat-toolbar color="primary" role="doc-footnote">
+        <span>a</span>
+    </mat-toolbar>
+</footer>
