--- a/src/styles.scss
+++ b/src/styles.scss
@@ -67,3 +67,9 @@ body {
   font-family: "Intel", Roboto, "Helvetica Neue", sans-serif;
   background-color: #FFFAF2;
 }
+
+:root {
+  --primary: #645353;
+  --accent: green;
+  --warn: red;
+}
