--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,15 +5,18 @@
         </button>
         <button 
             mat-icon-button 
-            routerLink="/profile" 
             [matMenuTriggerFor]="menu" 
             aria-label="Menu"
         >
-            <mat-icon>person</mat-icon>
+            <mat-icon>menu</mat-icon>
         </button>
         <mat-menu #menu="matMenu">
+            <button mat-menu-item routerLink="/profile">
+                <mat-icon>person</mat-icon>
+                <span>Perfil</span>
+            </button>
             <button mat-menu-item routerLink="/menu">
-                <mat-icon>more_vert</mat-icon>
+                <mat-icon>list</mat-icon>
                 <span>Menu</span>
             </button>
         </mat-menu>
