--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<app-header *ngIf="showHeader()"></app-header>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<div class="app-container">
+  <app-header *ngIf="showHeader()"></app-header>
+  <router-outlet></router-outlet>
+  <app-footer></app-footer>
+</div>
