--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,14 +1,13 @@
 <header>
     <mat-toolbar color="primary" class="header" role="heading">
-        <button mat-button (click)="logout()">
-            Cerrar Sesion
-        </button>
         <button 
             mat-icon-button 
             [matMenuTriggerFor]="menu" 
             aria-label="Menu"
+            matTooltip="Menu"
+            aria-label="boton de menu"
         >
-            <mat-icon>menu</mat-icon>
+            <mat-icon>more_vert</mat-icon>
         </button>
         <mat-menu #menu="matMenu">
             <button mat-menu-item routerLink="/profile">
@@ -18,6 +17,10 @@
             <button mat-menu-item routerLink="/menu">
                 <mat-icon>list</mat-icon>
                 <span>Menu</span>
+            </button>
+            <button mat-menu-item (click)="logout()">
+                <mat-icon>logout</mat-icon>
+                <span>Cerrar Sesion</span>
             </button>
         </mat-menu>
     </mat-toolbar>
