--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,8 @@
 <header>
     <mat-toolbar color="primary" class="header" role="heading">
+        <span>
+            {{user().name}}
+        </span>
         <button 
             mat-icon-button 
             [matMenuTriggerFor]="menu" 
