--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -34,5 +34,8 @@
     >
         Informes por dias
     </div>
+    <div class="mat-elevation-z4 button" matRipple routerLink="/forms/generator">
+        Generador de formularios
+    </div>
 
 </div>
