--- a/src/app/generator/components/field-editor/field-editor.component.html
+++ b/src/app/generator/components/field-editor/field-editor.component.html
@@ -1,13 +1,17 @@
-<div *ngIf="field">
-    <ng-container [ngSwitch]="field.type">
-        <div *ngSwitchCase="'text'">
-            <app-text-editor #textEditor></app-text-editor>
-        </div>
-        <div *ngSwitchCase="'checkbox'">
-            <app-checkbox-editor #checkboxEditor></app-checkbox-editor>
-        </div>
-        <div *ngSwitchDefault>
-            Tipo de campo no reconocido
-        </div>
-    </ng-container>
-</div>
+<ng-container [ngSwitch]="field.type">
+    <div *ngSwitchCase="'text'">
+        <app-text-editor [field]="field"></app-text-editor>
+    </div>
+    <div *ngSwitchCase="'checkbox'">
+        <app-checkbox-editor [field]="field | cast: CheckboxField"></app-checkbox-editor>
+    </div>
+    <div *ngSwitchCase="'radio'">
+        <app-radio-editor [field]="field | cast: RadioField"></app-radio-editor>
+    </div>
+    <div *ngSwitchCase="'selector'">
+        <app-selector-editor [field]="field | cast: SelectorField"></app-selector-editor>
+    </div>
+    <div *ngSwitchDefault>
+        Tipo de campo no reconocido
+    </div>
+</ng-container>
