--- a/src/app/generator/generator.component.html
+++ b/src/app/generator/generator.component.html
@@ -1,28 +1,34 @@
 <div>
-    <app-field-editor [field]="field"></app-field-editor>
+    <ng-container *ngIf="field">
+        <app-field-editor [field]="field"></app-field-editor>
+    </ng-container>
     
-    <div>
-        <mat-form-field>
-            <mat-label>Tipo de campo</mat-label>
-            <mat-select #input (selectionChange)="selected = $event.value">
-                <mat-option value="text">Texto corto</mat-option>
-                <mat-option value="checkbox">Casilla de marcar</mat-option>
-            </mat-select>
-        </mat-form-field>
-    </div>
-    <div>
-        <button mat-button (click)="invoke(selected)">
-            Crear
-        </button>
-        <button mat-button (click)="add()" [disabled]="field === undefined" color="accent">
-            Agregar
-        </button>
-    </div>
-    <div>
-        <button mat-raised-button color="primary">
-            Guardar
-        </button>
-    </div>
+    <mat-card>
+        <mat-card-content>
+            <mat-form-field>
+                <mat-label>Nombre del formulario</mat-label>
+                <input matInput [(ngModel)]="form.title">
+            </mat-form-field>
+            
+            <mat-form-field>
+                <mat-label>Tipo de campo</mat-label>
+                <mat-select #input (selectionChange)="selected = $event.value">
+                    <mat-option [value]="item.value" *ngFor="let item of fieldTypes">
+                        {{item.label}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+        </mat-card-content>
+
+        <mat-card-actions>
+            <button mat-button (click)="invoke(selected)">
+                Crear
+            </button>
+            <button mat-button (click)="add()" color="accent">
+                Agregar
+            </button>
+        </mat-card-actions>
+    </mat-card>
 </div>
 
 <mat-divider></mat-divider>
@@ -31,4 +37,8 @@
     Vista previa del formulario
 
     <app-form [form]="form"></app-form>
+    
+    <button mat-raised-button color="primary">
+        Guardar
+    </button>
 </div>
