--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="app-container">
-  <app-header *ngIf="showHeader()"></app-header>
+  <app-header></app-header>
   <router-outlet></router-outlet>
   <app-footer></app-footer>
 </div>
