--- a/src/app/generator/components/radio-editor/radio-editor.component.html
+++ b/src/app/generator/components/radio-editor/radio-editor.component.html
@@ -1,8 +1,14 @@
 <div>
     <mat-radio-group [required]="field.optional">
-        <mat-radio-button [value]="value" *ngFor="let value of field.options; let i = index">
+        <mat-radio-button *ngFor="let control of options; let i = index">
             <mat-form-field>
-                <input matInput [value]="field.options[i]" (change)="setOptionValue(i, $event)">
+                <input 
+                    matInput 
+                    [value]="control.value" 
+                    (input)="setOptionValue(i, $event)" 
+                    [formControl]="control"
+                    required
+                >
             </mat-form-field>
         </mat-radio-button>
     </mat-radio-group>
