--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -25,7 +25,7 @@
     >
         Informes por dias
     </div>
-    <div class="mat-elevation-z4 button" matRipple routerLink="/forms/generator">
+    <div class="mat-elevation-z4 button" matRipple routerLink="/forms/new">
         Generador de formularios
     </div>
 
