--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -5,9 +5,8 @@
 }
 
 .button {
-    background-color: var(--primary);
+    background-color: #D1F2F2;
     padding: 5px;
-    color: white;
     text-align: center;
 }
 
