--- a/src/app/form-reader/form-reader.component.html
+++ b/src/app/form-reader/form-reader.component.html
@@ -1,1 +1,6 @@
-<app-form></app-form>
+<div *ngIf="form">
+    <app-form [form]="form"></app-form>
+    <button mat-raised-button color="primary">
+        Enviar
+    </button>
+</div>
