answer object created

--- a/src/app/form-reader/form-reader.component.html
+++ b/src/app/form-reader/form-reader.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="form">
     <app-form [form]="form"></app-form>
-    <button mat-raised-button color="primary">
+    <button mat-raised-button color="primary" (click)="submit()">
         Enviar
     </button>
 </div>
