--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -35,7 +35,7 @@
     class="mat-elevation-z4 button" 
     *ngFor="let form of forms; let i = index" 
     matRipple 
-    [routerLink]="'/forms/' + keys[i]"
+    [routerLink]=" '/forms/' + forms[i].url"
 >
     {{form.title}}
 </div>
