--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -59,4 +59,8 @@
             Actualizar Contrasena
         </button>
     </form>
+
+    <button mat-raised-button color="warn" *ngIf="showDelete">
+        Eliminar
+    </button>
 </div>
