--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer>
     <mat-toolbar color="primary" role="doc-footnote">
-        <span>footer</span>
+        <span>© Copyright 2023</span>
     </mat-toolbar>
 </footer>
