--- a/src/app/components/text-viewer/text-viewer.component.html
+++ b/src/app/components/text-viewer/text-viewer.component.html
@@ -2,5 +2,5 @@
     <mat-label>
         {{field.label}}
     </mat-label>
-    <input matInput [required]="field.optional">
+    <input matInput required>
 </mat-form-field>
