--- a/src/app/generator/components/radio-editor/radio-editor.component.html
+++ b/src/app/generator/components/radio-editor/radio-editor.component.html
@@ -1,5 +1,5 @@
 <div>
-    <mat-radio-group [required]="field.optional">
+    <mat-radio-group required>
         <mat-radio-button *ngFor="let control of options; let i = index">
             <mat-form-field>
                 <input 
@@ -18,7 +18,4 @@
     <button mat-button (click)="addOption()" matTooltip="Agregar opcion">
         <mat-icon>add</mat-icon>
     </button>
-    <mat-checkbox (change)="field.optional = $event.checked">
-        Opcional
-    </mat-checkbox>
 </div>
