--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -6,6 +6,7 @@
         class="mat-elevation-z4 button" 
         matRipple 
         *ngIf="loggedUser().role.manageUsers"
+        routerLink="profile/new"
     >
         Nuevo empleado
     </div>
@@ -35,7 +36,7 @@
     class="mat-elevation-z4 button" 
     *ngFor="let form of forms; let i = index" 
     matRipple 
-    [routerLink]=" '/forms/' + forms[i].url"
+    [routerLink]=" '/forms/' + forms[i].name"
 >
     {{form.title}}
 </div>
