--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -7,14 +7,16 @@
 
 <table mat-table [dataSource]="dataSource">
     <ng-container matColumnDef="No.">
-        <th mat-header-cell *matHeaderCellDef>No.</th>
-        <td mat-cell *matCellDef="let element">{{element.name}}</td>
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let element">
+            {{element.name}}
+        </td>
     </ng-container>
 
     <ng-container matColumnDef="Nombre">
-        <th mat-header-cell *matHeaderCellDef>Nombre</th>
+        <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let element">
-            <button mat-raised-button color="accent" [routerLink]="'/user/' + element.link">
+            <button mat-raised-button color="accent" [routerLink]="'/profile/' + element.url">
                 Ver perfil
             </button>
         </td>
