--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -13,7 +13,7 @@
             <mat-icon>more_vert</mat-icon>
         </button>
         <mat-menu #menu="matMenu">
-            <button mat-menu-item [routerLink]="'/profile/' + user().id">
+            <button mat-menu-item [routerLink]="'/profile/' + user()._id">
                 <mat-icon>person</mat-icon>
                 <span>Perfil</span>
             </button>
