--- a/src/app/reports/reports.component.html
+++ b/src/app/reports/reports.component.html
@@ -1,89 +1,7 @@
 <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="center">
-    <mat-tab label="Lavado de manos">
-        <mat-form-field appearance="outline">
-            <mat-label>Dia inicio</mat-label>
-            <input matInput type="number">
-        </mat-form-field>
-        <mat-form-field appearance="outline">
-            <mat-label>Dia fin</mat-label>
-            <input matInput type="number">
-        </mat-form-field>
-
-        <table mat-table [dataSource]="source">
-            <ng-container matColumnDef="No.">
-                <th mat-header-cell *matHeaderCellDef>No.</th>
-                <td mat-cell *matCellDef="let element">{{element.name}}</td>
-            </ng-container>
-
-            <ng-container matColumnDef="Nombre">
-                <th mat-header-cell *matHeaderCellDef>Nombre</th>
-                <td mat-cell *matCellDef="let element">{{element.lastname}}</td>
-            </ng-container>
-            
-            <tr mat-header-row *matHeaderRowDef="columns"></tr>
-            <tr mat-row *matRowDef="let row; columns: columns"></tr>
-        </table>
-
-        <button mat-button>
-            Descargar informe
-        </button>
+    
+    <mat-tab  [label]="report" *ngFor="let report of columns">
+        aqui va una tabla con las entradas por formulario
     </mat-tab>
-    <mat-tab label="Reporte de sistemas">
-        <mat-form-field appearance="outline">
-            <mat-label>Dia inicio</mat-label>
-            <input matInput type="number">
-        </mat-form-field>
-        <mat-form-field appearance="outline">
-            <mat-label>Dia fin</mat-label>
-            <input matInput type="number">
-        </mat-form-field>
-
-        <table mat-table [dataSource]="source">
-            <ng-container matColumnDef="No.">
-                <th mat-header-cell *matHeaderCellDef>No.</th>
-                <td mat-cell *matCellDef="let element">{{element.name}}</td>
-            </ng-container>
-
-            <ng-container matColumnDef="Nombre">
-                <th mat-header-cell *matHeaderCellDef>Nombre</th>
-                <td mat-cell *matCellDef="let element">{{element.lastname}}</td>
-            </ng-container>
-            
-            <tr mat-header-row *matHeaderRowDef="columns"></tr>
-            <tr mat-row *matRowDef="let row; columns: columns"></tr>
-        </table>
-
-        <button mat-button>
-            Descargar informe
-        </button>
-    </mat-tab>
-    <mat-tab label="Verificacion de sistemas">
-        <mat-form-field appearance="outline">
-            <mat-label>Dia inicio</mat-label>
-            <input matInput type="number">
-        </mat-form-field>
-        <mat-form-field appearance="outline">
-            <mat-label>Dia fin</mat-label>
-            <input matInput type="number">
-        </mat-form-field>
-
-        <table mat-table [dataSource]="source">
-            <ng-container matColumnDef="No.">
-                <th mat-header-cell *matHeaderCellDef>No.</th>
-                <td mat-cell *matCellDef="let element">{{element.name}}</td>
-            </ng-container>
-
-            <ng-container matColumnDef="Nombre">
-                <th mat-header-cell *matHeaderCellDef>Nombre</th>
-                <td mat-cell *matCellDef="let element">{{element.lastname}}</td>
-            </ng-container>
-            
-            <tr mat-header-row *matHeaderRowDef="columns"></tr>
-            <tr mat-row *matRowDef="let row; columns: columns"></tr>
-        </table>
-
-        <button mat-button>
-            Descargar informe
-        </button>
-    </mat-tab>
+    
 </mat-tab-group>
