added reports and data submit

--- a/src/app/components/field-viewer/field-viewer.component.html
+++ b/src/app/components/field-viewer/field-viewer.component.html
@@ -1,15 +1,27 @@
 <ng-container [ngSwitch]="field.type">
     <div *ngSwitchCase="'text'">
-        <app-text-viewer [field]="field"></app-text-viewer>
+        <app-text-viewer [field]="field" (change)="sendValue($event)"></app-text-viewer>
     </div>
     <div *ngSwitchCase="'checkbox'">
-        <app-checkbox-viewer [field]="field | cast: CheckboxField"></app-checkbox-viewer>
+        <app-checkbox-viewer 
+            [field]="field | cast: CheckboxField" 
+            (change)="sendValue($event)"
+        >
+        </app-checkbox-viewer>
     </div>
     <div *ngSwitchCase="'radio'">
-        <app-radio-viewer [field]="field | cast: RadioField"></app-radio-viewer>
+        <app-radio-viewer 
+            [field]="field | cast: RadioField" 
+            (change)="sendValue($event)"
+        >
+        </app-radio-viewer>
     </div>
     <div *ngSwitchCase="'selector'">
-        <app-selector-viewer [field]="field | cast: SelectorField"></app-selector-viewer>
+        <app-selector-viewer 
+            [field]="field | cast: SelectorField" 
+            (change)="sendValue($event)"
+        >
+        </app-selector-viewer>
     </div>
     <div *ngSwitchDefault>
         Tipo de campo no reconocido
