--- a/src/app/reports/reports.component.html
+++ b/src/app/reports/reports.component.html
@@ -1,7 +1,38 @@
-<mat-tab-group mat-stretch-tabs="false" mat-align-tabs="center">
+<mat-tab-group mat-stretch-tabs="false" mat-align-tabs="center" *ngIf="gotData">
     
-    <mat-tab  [label]="report" *ngFor="let report of columns">
-        aqui va una tabla con las entradas por formulario
+    <mat-tab  [label]="report.title" *ngFor="let report of columns; let i = index">
+        <table mat-table [dataSource]="source[i]">
+
+            <ng-container matColumnDef="author">
+                <th mat-header-cell *matHeaderCellDef>
+                    Quien lo diligencio
+                </th>
+                <td mat-cell *matCellDef="let element">
+                    {{element.author}}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="creationDate">
+                <th mat-header-cell *matHeaderCellDef>
+                    Cuando se diligencio
+                </th>
+                <td mat-cell *matCellDef="let element">
+                    {{element.creationDate | date:'yyyy-MM-dd'}}
+                </td>
+            </ng-container>
+
+            <ng-container [matColumnDef]="field.name" *ngFor="let field of report.fields">
+                <th mat-header-cell *matHeaderCellDef>
+                    {{field.label}}
+                </th>
+                <td mat-cell *matCellDef="let element">
+                    {{element[field.name]}}
+                </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayColumns[i]"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayColumns[i];"></tr>
+        </table>
     </mat-tab>
     
 </mat-tab-group>
